# octopus-scraper

./: .gitignore  Cargo.toml  raw_electricity_data.json  raw_gas_data.json  shell.nix
python/: .envrc  .flake8  .gitignore  .isort.cfg  LICENSE  README.md  mypy.ini  pylintrc  pyproject.toml  shell.nix
python/octopus_energy_scraper/: __init__.py  config.py  main.py  py.typed  scraper.py
python/octopus_energy_scraper/api_consumer/: account.py  client.py  consumption.py
python/octopus_energy_scraper/data_cache/: base.py  file.py
python/octopus_energy_scraper/types/: electricity.py  gas.py  usage.py
python/tests/data_cache/: test_file_cache.py
python/tests/types/: sample_electricity_usage.json  sample_gas_usage.json  test_usage.py
rust/: .data  Cargo.toml  electric_consumption.json  shell.nix
rust/src/: api.rs  args.rs  main.rs
rust/src/cache/: file.rs  mod.rs
rust/src/types/: mod.rs  temp_dir.rs  usage.rs  util.rs
zig/: flake.nix
