[tool.poetry]
name = "octopus_energy_scraper"
version = "0.1.0"
description = "Syncs Octopus electric and gas usage to a local sqlite DB"
authors = ["Sam Martin-Brown <sammartin@hey.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/"
homepage = "https://github.com/"
documentation = "https://readthedocs.io"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.5"
httpx = "^0.23.3"


[tool.poetry.group.dev.dependencies]
better-exceptions = "*"
flake8 = "*"
flake8-blind-except = "*"
flake8-builtins = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-logging-format = "*"
flake8-mutable = "*"
flake8-rst-docstrings = "*"
flake8-todo = "*"
ipdb = "*"
ipython = "*"
isort = {version = "*",extras = ["pyproject"]}
mypy = "*"
pylint = "*"
pyls-isort = "*"
pylsp-mypy = "*"
python-lsp-server = {version = "*", extras = ["all"]}
rope = "*"


[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"
hypothesis = "^6.68.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
