[package]
name = "octopus-data-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
uuid = {version="*", features=["v4"]}
chrono = {version = "*", features=["serde"]}
clap = {version = "4.0.19", features=["derive"]}
env_logger = "0.9.2"
log = "0.4.17"
reqwest = {version="0.11.12", features=["blocking", "json"]}
serde = {version = "1.0.147", features=["derive"]}
serde_json = "1.0.87"
